--- a/views/home.html
+++ b/views/home.html
@@ -17,7 +17,7 @@
 <body>  
  
     <header>
-
+       
         <div class="logo">
             <div class="borde-logo"><img src="/public/images/Logo1.png">
             </div>
@@ -42,17 +42,17 @@
 
     </header>
 
-        <div class="banner">
+        <!--<div class="banner">
             <video  autoplay muted loop src="/public/images/Banner1.mp4"></video>
        
-        </div>
+        </div> -->
     
         <div class="fotos">
         <div class="foto1">
-            <a href="product"> <img src="/public//Color.jpeg" ><p class="t1">Color</p></a>
+            <a href="product"> <img src="/public/images/Color.jpg" ><p class="t1">Color</p></a>
         </div>
-        <div class="foto2"><img class="img" src="/public/images/Care.jpeg"><p class="t2">Care</p></div>
-        <div class="foto3"><img class="img" src="/public/images/Styling.jpeg"><p class="t3">Styling</p></div>
+        <div class="foto2"><img class="img" src="/public/images/Care.jpg"><p class="t2">Care</p></div>
+        <div class="foto3"><img class="img" src="/public/images/Styling.jpg"><p class="t3">Styling</p></div>
         <div class="foto4"><img class="img" src="/public/images/Barber.jpg"><p class="t4">Barber Shop</p></div>
     </div>
     </div>
