--- a/views/home.html
+++ b/views/home.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/a446d30822.js" crossorigin="anonymous"></script>
 
 
-    <title>Document</title>
+    <title>Hairsy</title>
 </head>
 
 <body>  
@@ -19,7 +19,7 @@
     <header>
        
         <div class="logo">
-            <div class="borde-logo"><img src="/public/images/Logo1.png">
+            <div class="borde-logo"><img src="/public/images/Logo1.png" >
             </div>
         </div>
 
@@ -62,9 +62,6 @@
 
 
 </body>
-
-</html>
-
 <footer>
 
 
@@ -80,3 +77,4 @@
    </div>
     
 </footer>
+</html>
