--- a/public/css/home-styles.css
+++ b/public/css/home-styles.css
@@ -24,7 +24,6 @@ header {
     }
 
 .logo {
-    
     display: flex;
     width: 15%;
     padding: 5px;
@@ -116,6 +115,12 @@ ul {
     display: flex;
     padding: 15px;
 
+}
+
+footer{ 
+    background: url(/public/images/Fondo\ Header.jpg);
+    margin-top: 80px;
+    padding: 2px;
 }
 
 
