--- a/views/register.html
+++ b/views/register.html
@@ -4,9 +4,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <link href="/css/login-styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a446d30822.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-    Register
+   
+<header>
+
+    <div class="logo">
+        <div class="borde-logo"><img src="/public/images/Logo1.png">
+        </div>
+    </div>
+
+    <div class="botones-header">
+
+        <div>
+            <ul>
+                <li class="tendencias"><a href="#">Tendencias</a></li>
+                <li class="descuentos"><a href="#">Descuentos</a></li>
+
+                <div class="forms">
+                    <li class="cuenta"> <a href="/register">Crear cuenta </a></li>
+                    <li class="login"> <a href="/login">Ingresar </a></li>
+                </div>
+                <li class="cart"><i class="fa-solid fa-cart-shopping"></i></li>
+            </ul>
+        </div>
+
+    </div>
+</header>
+    <main class="main">
+       
+        <div class="login-box">
+           <img src="">    </img>
+           
+             <h2>Bienvenidxs</h2>   
+
+                <div class="login">
+            
+                    <form action="/" method="get">
+
+                <div class="usuario">
+                    <input type="text" placeholder="Nombre de usuario" name="usuario"> </input>
+                </div>
+
+                <div class="password">
+                    <input type="pass" placeholder="Contraseña"> </input>
+                </div>
+
+                
+                
+                    <button class="enviar1" type="">Ingresar</button>
+                    <div class="pregunta">
+
+                        <a class="contra" href="/" >Olvide mi Contraseña</a>
+                        
+                        <a class="register"     href="/register" >Todavia no me registre</a>
+                </div>
+                    </form> 
+        
+                </div>
+        
+        </div>
+       
+           
+
+        
+       
+
+        
+    </main>
+    <footer>
+
+
+        <div><i class="fa-solid fa-bars"></i></div>
+        <li class="ayuda">Ayuda</li>
+       <div class="logos">  
+    
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-pinterest"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook"></i>
+    
+       </div>
+        
+    </footer>
 </body>
 </html>
