--- a/views/login.html
+++ b/views/login.html
@@ -14,7 +14,7 @@
 <header>
 
     <div class="logo">
-        <div class="borde-logo"><img src="/public/images/Logo1.png">
+        <div class="borde-logo"><a href ="/"><img src="/public/images/Logo1.png"></a>
         </div>
     </div>
 
@@ -76,5 +76,20 @@
 
         
     </main>
+    <footer>
+
+
+      
+       
+        <div class="logos">
+
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-pinterest"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-facebook"></i>
+
+        </div>
+
+    </footer>
 </body>
 </html>
