--- a/views/product.html
+++ b/views/product.html
@@ -14,7 +14,7 @@
     <header>
        
         <div class="logo">
-            <div class="borde-logo"><img src="/public/images/Logo1.png">
+            <div class="borde-logo"><a href ="/"><img src="/public/images/Logo1.png"></a>
             </div>
         </div>
 
@@ -56,8 +56,6 @@
     <footer>
 
 
-        <div><i class="fa-solid fa-bars"></i></div>
-        <li class="ayuda">Ayuda</li>
        <div class="logos">  
     
         <i class="fa-brands fa-youtube"></i>
