--- a/public/css/login-styles.css
+++ b/public/css/login-styles.css
@@ -24,7 +24,7 @@ header {
     }
 
 .logo {
-    border: 2px solid black;
+    
     display: flex;
     width: 15%;
     padding: 5px;
@@ -190,4 +190,11 @@ h2 {
 .password {
     margin-bottom: 20px;
 
+}
+
+
+footer{ 
+    background: url(/public/images/Fondo\ Header.jpg);
+
+    padding: 2px;
 }
