Add cart view with subtotal

--- a/views/home.html
+++ b/views/home.html
@@ -34,7 +34,7 @@
                         <li class="cuenta"> <a href="/register">Crear cuenta </a></li>
                         <li class="login"> <a href="/login">Ingresar </a></li>
                     </div>
-                    <li class="cart"><i class="fa-solid fa-cart-shopping"></i></li>
+                    <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
                 </ul>
             </div>
 
