--- a/views/cart.html
+++ b/views/cart.html
@@ -4,9 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    <link href="/css/cart-styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a446d30822.js" crossorigin="anonymous"></script>
+    <title>Hairsy</title>
 </head>
 <body>
-    Cart
+    <header>
+       
+        <div class="logo">
+            <div class="borde-logo"><a href ="/"><img src="/public/images/Logo1.png"></a>
+            </div>
+        </div>
+
+        <div class="botones-header">
+
+            <div>
+                <ul>
+                    <li class="tendencias"><a href="#">Tendencias</a></li>
+                    <li class="descuentos"><a href="#">Descuentos</a></li>
+
+                    <div class="forms">
+                        <li class="cuenta"> <a href="/register">Crear cuenta </a></li>
+                        <li class="login"> <a href="/login">Ingresar </a></li>
+                    </div>
+                    <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
+                </ul>
+            </div>
+
+        </div>
+
+    </header>
+    <main class="main-cart">
+        <h1>Bolsa de productos</h1>  
+        <div class="producto"><img class="product-detail" src="/public/images/producto-1.jpg">
+            <div class="descripcion">
+            <br>
+            <p>Crema Facial</p>
+            <br>
+            <h3>$200.00 (Imp. incluidos)</h3>
+        </div>
+        <br>
+        <div class="producto">
+            <div class="descripcion">
+            <br>
+            <p>Cepillo 200 cerdas</p>
+            <br>
+            <h3>$150.00 (Imp. incluidos)</h3>
+        </div>
+        <br>
+        <div class="subtotal">
+            <h3>Subtotal</h3>  
+            <h3>$350.00 (Imp. incluidos)</h3>
+            <br>
+            <button class="agregar-carrito-button">Comprar</button>
+        </div>
+    </main>
+    <footer>
+
+
+       <div class="logos">  
+    
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-pinterest"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook"></i>
+    
+       </div>
+        
+    </footer>
 </body>
 </html>
