--- a/views/home.html
+++ b/views/home.html
@@ -17,47 +17,59 @@
 <body>  
  
     <header>
-       
         <div class="logo">
-            <div class="borde-logo"><img src="/public/images/Logo1.png" >
+            <div class="borde-logo"><a href ="/"><img src="/public/images/Logo1.png"></a>
             </div>
         </div>
-
-        <div class="botones-header">
-
             <div>
-                <ul>
-                    <li class="tendencias"><a href="#">Tendencias</a></li>
-                    <li class="descuentos"><a href="#">Descuentos</a></li>
-
+                <div class="menu-mobile">
+                    <i class="fas fa-thin fa-bars"></i>
+                    <i class="fas fa-thin fa-cart-shopping"></i>
+                    <i class="fas fa-thin fa-user"></i>
+                </div>
+                <div class="header-menu">
+                    <ul>
+                        <li class="tendencias"><a href="#">Tendencias</a></li>
+                        <li class="descuentos"><a href="#">Descuentos</a></li>
                     <div class="forms">
                         <li class="cuenta"> <a href="/register">Crear cuenta </a></li>
                         <li class="login"> <a href="/login">Ingresar </a></li>
                     </div>
-                    <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
-                </ul>
+                        <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
+                    </ul>
             </div>
-
         </div>
-
     </header>
-
-       
     
-        <div class="fotos">
-        <div class="foto1">
-            <a href="product"> <img src="/public/images/Color.jpg" ><p class="t1">Color</p></a>
+    
+    <div class="main-container">
+        
+        <div id="banner">
+            <video loop muted autoplay preload="auto">
+                <source src="/public/images/abstract1.mp4">
+            </video>
         </div>
-        <div class="foto2"><img class="img" src="/public/images/Care.jpg"><p class="t2">Care</p></div>
-        <div class="foto3"><img class="img" src="/public/images/Styling.jpg"><p class="t3">Styling</p></div>
-        <div class="foto4"><img class="img" src="/public/images/Barber.jpg"><p class="t4">Barber Shop</p></div>
+        
+        <div class="fotos">
+       
+            <div class="foto1">
+                <a href="product"> <img src="/public/images/Color.jpg" ><p class="t1">Color</p></a></div>
+            <div class="foto2"><img class="img" src="/public/images/Care.jpg"><p class="t2">Care</p></div>
+            <div class="foto3"><img class="img" src="/public/images/Styling.jpg"><p class="t3">Styling</p></div>
+            <div class="foto4"><img class="img" src="/public/images/Barber.jpg"><p class="t4">Barber Shop</p></div>
+        </div>
+    
     </div>
-    </div>
-
-
+    
+    
+   
 
     <footer>
-
+        <div id="banner">
+            <video loop muted autoplay preload="auto">
+                <source src="/public/images/abstract1.mp4">
+            </video>
+        </div>
 
     
     
