--- a/public/css/register-styles.css
+++ b/public/css/register-styles.css
@@ -18,12 +18,27 @@ body{
 
 header {
     background: url(/public/images/Fondo\ Header.jpg);
-    background-size: 100%;
-    background-position-x: left;
     border-bottom: 1px solid black;
+    width: 100vw;
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    background: transparent;
+    backdrop-filter: blur(5px);
+    z-index: 100;
+    color: white;
 }
+.header-menu{
+    display:none;
+}
+.menu-mobile{
+    display:block;
+    display:flex;
+    margin: 30px;
+    font-size: 20px;
+    color: black
+}
+
 
 .borde-logo {
     padding: 0px;
@@ -47,11 +62,13 @@ ul {
 .tendencias {
     margin-left: 60px;
     font-weight: bold;
+    font-family: Satisfy;
     
 }
 
 .descuentos {
     font-weight: bold;
+    font-family: Satisfy;
 }
 
 .cart{
@@ -170,15 +187,49 @@ h2 {
 }
 
 .logos {
-
+    align-items: center;
     display: flex;
-    padding: 15px;
-
+    padding: 20px;
+    margin-left: 70px;
+   
 }
 
-footer{ 
-    background: url(/public/images/Fondo\ Header.jpg);
-    margin-top: 80px;
-    padding: 0px;
-    margin:0px
+footer {
+    width: 100vw;
+}
+
+
+@media (max-width: 460px){
+    /* Tablets */
+    .fotos {
+        flex-direction: column; 
+     }
+   
+}
+
+
+@media (min-width: 460px){
+    /* Tablets */
+    .fotos {
+        flex-direction: column; 
+     }
+   
+}
+@media (min-width: 768px){
+    /* Laptop */
+    .header-menu{
+        display:block;
+    }
+    .menu-mobile{
+        display:none;
+    }
+    video {
+        display: block;
+    }
+    .fotos {
+        flex-direction: row; 
+     }
+   
+ 
+
 }
