--- a/views/login.html
+++ b/views/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <link href="/css/login-styles.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a446d30822.js" crossorigin="anonymous"></script>
     <title>Document</title>
