--- a/views/home.html
+++ b/views/home.html
@@ -14,75 +14,90 @@
     <title>Hairsy</title>
 </head>
 
-<body>  
- 
+<body>
+
     <header>
         <div class="logo">
-            <div class="borde-logo"><a href ="/"><img src="/public/images/Logo1.png"></a>
+            <div class="borde-logo"><a href="/"><img src="/public/images/Logo1.png"></a>
             </div>
         </div>
-            <div>
-                <div class="menu-mobile">
-                    <i class="fas fa-thin fa-bars"></i>
-                    <i class="fas fa-thin fa-cart-shopping"></i>
-                    <i class="fas fa-thin fa-user"></i>
-                </div>
-                <div class="header-menu">
-                    <ul>
-                        <li class="tendencias"><a href="#">Tendencias</a></li>
-                        <li class="descuentos"><a href="#">Descuentos</a></li>
-                    <div class="forms">
-                        <li class="cuenta"> <a href="/register">Crear cuenta </a></li>
-                        <li class="login"> <a href="/login">Ingresar </a></li>
-                    </div>
-                        <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
-                    </ul>
+        <div>
+            <div class="header-menu">
+                <ul>
+                    <li class="menu"><a href="#"><i class="fas fa-thin fa-bars"></i></a></li>
+                    <li class="wish-list"><a href="#"><i class="fas fa-thin fa-heart"></i></a></li>
+                    <li class="user"><a href="#"><i class="fas fa-thin fa-user"></i></a></li>
+                    <li class="contact"><a href="#"><i class="fas fa-thin fa-headphones"></i></a></li>
+                    <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
+                </ul>
+
             </div>
-        </div>
     </header>
-    
-    
+
+
     <div class="main-container">
-        
+
         <div id="banner">
             <video loop muted autoplay preload="auto">
                 <source src="/public/images/abstract1.mp4">
             </video>
         </div>
-        
+
         <div class="fotos">
-       
+
             <div class="foto1">
-                <a href="product"> <img src="/public/images/Color.jpg" ><p class="t1">Color</p></a></div>
-            <div class="foto2"><img class="img" src="/public/images/Care.jpg"><p class="t2">Care</p></div>
-            <div class="foto3"><img class="img" src="/public/images/Styling.jpg"><p class="t3">Styling</p></div>
-            <div class="foto4"><img class="img" src="/public/images/Barber.jpg"><p class="t4">Barber Shop</p></div>
+                <a href="product"> <img src="/public/images/Color.jpg">
+                    <p class="t1">Color</p>
+                </a>
+            </div>
+            <div class="foto2"><img class="img" src="/public/images/Care.jpg">
+                <p class="t2">Care</p>
+            </div>
+            <div class="foto3"><img class="img" src="/public/images/Styling.jpg">
+                <p class="t3">Styling</p>
+            </div>
+            <div class="foto4"><img class="img" src="/public/images/Barber.jpg">
+                <p class="t4">Barber Shop</p>
+            </div>
         </div>
-    
+
     </div>
-    
-    
-   
+
+
+
+
 
     <footer>
-        <div id="banner">
-            <video loop muted autoplay preload="auto">
-                <source src="/public/images/abstract1.mp4">
-            </video>
-        </div>
+        <section class="grilla-footer">
+            <div>
+                <p class="titulo_footer">ACERCA DE NOSOTROS</p>
+            </div>
 
-    
-    
-        <div class="logos">  
-     
-         <i class="fa-brands fa-youtube"></i>
-         <i class="fa-brands fa-pinterest"></i>
-         <i class="fa-brands fa-instagram"></i>
-         <i class="fa-brands fa-facebook"></i>
-     
+            <div>
+                <p class="titulo_footer">SERVICIO AL CLIENTE</p>
+                <p>Defensa del consumidor</p>
+                <p>Como cancelar una compra</p>
+            </div>
+            <div>
+                <p class="titulo_footer">FAQ</p>
+                <p>Preguntas Frecuentes</p>
+                <p>Politicas de Privacidad</p>
+                <p>Términos y Condiciones</p>
+        </section>
+
+
+
+        <div class="logos">
+
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-pinterest"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-facebook"></i>
+
         </div>
-         
-     </footer>
+            <div class="marcaRegistrada"><p>Hairsy Inc <i class="fa-solid fa-copyright"> 2022</i></p></div>
+        
+    </footer>
 
 </body>
 
