--- a/views/register.html
+++ b/views/register.html
@@ -86,18 +86,38 @@
     </main>
     <footer>
 
-
-        
-       
-        <div class="logos">
-
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-pinterest"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook"></i>
-
-        </div>
-
+        <footer>
+            <section class="grilla-footer">
+                <div>
+                    <p class="titulo_footer">ACERCA DE NOSOTROS</p>
+                </div>
+    
+                <div>
+                    <p class="titulo_footer">SERVICIO AL CLIENTE</p>
+                    <p>Defensa del consumidor</p>
+                    <p>Como cancelar una compra</p>
+                </div>
+                <div>
+                    <p class="titulo_footer">FAQ</p>
+                    <p>Preguntas Frecuentes</p>
+                    <p>Politicas de Privacidad</p>
+                    <p>Términos y Condiciones</p>
+            </section>
+    
+    
+    
+            <div class="logos">
+    
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-pinterest"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook"></i>
+    
+            </div>
+                <div class="marcaRegistrada"><p>Hairsy Inc <i class="fa-solid fa-copyright"> 2022</i></p></div>
+            
+        </footer>
+    
     </footer>
 </body>
 
