--- a/public/css/home-styles.css
+++ b/public/css/home-styles.css
@@ -6,9 +6,10 @@
     text-decoration: none;
     
 }
+/*color*/
+/* #ffcb00 amarillo */
 
-
-
+/********************video***********************/
 body{
     background: url(/public/images/abstract1.mp4);
     font-family: roboto;
@@ -58,6 +59,8 @@ video {
     z-index: 10;
     object-fit: cover;
 }
+/*******************************video************************************************/
+
 
 .fotos {
     z-index: 1;
@@ -69,6 +72,9 @@ video {
     align-items: center;
     height: 60vh;
 }
+
+
+/****************************HEADER*************************************************/
 
 header {
     background: url(/public/images/Fondo\ Header.jpg);
@@ -82,9 +88,7 @@ header {
     z-index: 100;
     color: white;
 }
-.header-menu{
-    display:none;
-}
+
 .menu-mobile{
     display:block;
     display:flex;
@@ -110,56 +114,63 @@ ul {
     display: flex;
     list-style: none;
     color: white;
-   
 }
-.tendencias {
-    margin-left: 60px;
-    font-weight: bold;
-    font-family: Satisfy;
+
+
+a {
+    text-decoration: none;
     color: white;
 }
-.descuentos {
-    font-weight: bold;
-    font-family: Satisfy;
-}
+
+/***************************************************************************************/
+
 .cart{
     width: 10%;
 }
 
-.cuenta {
-    width: 50%;
-}
-.login{
-    width: 50%;
-}
 .img {
     width: 100%;
     height: 90%;
     transition: all 500ms ease-out;
 }
-.capa{
-    position: absolute;
-    opacity: 0;
-    visibility: hidden;
-    align-items: center;
-}
-.t1 {
-    font-family: 'Satisfy', cursive;
-    color:rgb(0, 0, 0);
-    position: absolute;
-}
+
 .logos {
-    align-items: center;
+    
     display: flex;
     padding: 20px;
-    margin-left: 70px;
+    size: 2em;
+    align-items: center;
+    text-align: center;
+    
    
 }
+
+
+/************************FOOTER***************************************************************/
 footer {
     width: 100vw;
 }
 
+.grilla-footer{
+    display: flex;
+    font-family: roboto;
+    padding: 20px;
+   text-align: center;
+}
 
+.titulo_footer{
+    font-size: 15px;
+}
+p{
+    font-size: 12px;
+}
+
+.marcaRegistrada {
+    display: flex;
+    flex-direction: row;
+}
+
+/***********************MEDIA QUERY*****************************************************************/
 @media (max-width: 460px){
     /* Tablets */
     .fotos {
@@ -178,12 +189,7 @@ footer {
 }
 @media (min-width: 768px){
     /* Laptop */
-    .header-menu{
-        display:block;
-    }
-    .menu-mobile{
-        display:none;
-    }
+   
     video {
         display: block;
     }
