--- a/public/css/register-styles.css
+++ b/public/css/register-styles.css
@@ -9,13 +9,6 @@
 body{
     font-family: roboto;
 }
-
-.t1 {
-    font-family: 'Satisfy', cursive;
-    color:white;
-    position: absolute;
-}
-
 header {
     background: url(/public/images/Fondo\ Header.jpg);
     border-bottom: 1px solid black;
@@ -28,9 +21,7 @@ header {
     z-index: 100;
     color: white;
 }
-.header-menu{
-    display:none;
-}
+
 .menu-mobile{
     display:block;
     display:flex;
@@ -45,6 +36,26 @@ header {
     }
 
 .logo {
+    display: flex;
+    width: 15%;
+    padding: 5px;
+   
+
+}
+ul {
+    padding: 40px;
+    display: flex;
+    list-style: none;
+    color: white;
+}
+
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.logo {
     
     display: flex;
     width: 15%;
@@ -52,73 +63,19 @@ header {
 
 }
 
-ul {
-   padding: 40px;
-    display: flex;
-    list-style: none;
-   
-}
-
-.tendencias {
-    margin-left: 60px;
-    font-weight: bold;
-    font-family: Satisfy;
-    
-}
-
-.descuentos {
-    font-weight: bold;
-    font-family: Satisfy;
-}
 
 .cart{
     width: 10%;
 }
 
-.ayuda{
-    width: 25%;
-}
 
-.forms{
-    display: flex;
-}
 
-.cuenta {
-    width: 50%;
-}
-
-.login{
-    width: 50%;
-    display: flex;
-    align-items: center;
-}
-
-.fotos{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 60vh;
-}
 
 .img {
     width: 100%;
     height: 90%;
     transition: all 500ms ease-out;
 }
-
-.capa{
-    position: absolute;
-    opacity: 0;
-    visibility: hidden;
-    align-items: center;
-}
-
-.foto1:hover > .capa{
-    opacity: 1;
-    visibility: visible;
-}
-
 
 main {
     
@@ -194,9 +151,25 @@ h2 {
    
 }
 
+/********************************************************************/
 footer {
     width: 100vw;
 }
+
+.grilla-footer{
+    display: flex;
+    font-family: roboto;
+    padding: 20px;
+   text-align: center;
+}
+
+.titulo_footer{
+    font-size: 15px;
+}
+p{
+    font-size: 12px;
+}
+
 
 
 @media (max-width: 460px){
@@ -217,12 +190,7 @@ footer {
 }
 @media (min-width: 768px){
     /* Laptop */
-    .header-menu{
-        display:block;
-    }
-    .menu-mobile{
-        display:none;
-    }
+  
     video {
         display: block;
     }
