--- a/views/product.html
+++ b/views/product.html
@@ -12,28 +12,21 @@
 </head>
 <body>
     <header>
-       
         <div class="logo">
-            <div class="borde-logo"><a href ="/"><img src="/public/images/Logo1.png"></a>
+            <div class="borde-logo"><a href="/"><img src="/public/images/Logo1.png"></a>
             </div>
         </div>
-
-        <div class="botones-header">
-
-            <div>
+        <div>
+            <div class="header-menu">
                 <ul>
-                    <li class="tendencias"><a href="#">Tendencias</a></li>
-                    <li class="descuentos"><a href="#">Descuentos</a></li>
-
-                    <div class="forms">
-                        <li class="cuenta"> <a href="/register">Crear cuenta </a></li>
-                        <li class="login"> <a href="/login">Ingresar </a></li>
-                    </div>
+                    <li class="menu"><a href="#"><i class="fas fa-thin fa-bars"></i></a></li>
+                    <li class="wish-list"><a href="#"><i class="fas fa-thin fa-heart"></i></a></li>
+                    <li class="user"><a href="#"><i class="fas fa-thin fa-user"></i></a></li>
+                    <li class="contact"><a href="#"><i class="fas fa-thin fa-headphones"></i></a></li>
                     <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
                 </ul>
-            </div>
 
-        </div>
+            </div>
 
     </header>
     <main class="main-product">
@@ -55,16 +48,38 @@
     </main>
     <footer>
 
-
-       <div class="logos">  
+        <footer>
+            <section class="grilla-footer">
+                <div>
+                    <p class="titulo_footer">ACERCA DE NOSOTROS</p>
+                </div>
     
-        <i class="fa-brands fa-youtube"></i>
-        <i class="fa-brands fa-pinterest"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-facebook"></i>
+                <div>
+                    <p class="titulo_footer">SERVICIO AL CLIENTE</p>
+                    <p>Defensa del consumidor</p>
+                    <p>Como cancelar una compra</p>
+                </div>
+                <div>
+                    <p class="titulo_footer">FAQ</p>
+                    <p>Preguntas Frecuentes</p>
+                    <p>Politicas de Privacidad</p>
+                    <p>Términos y Condiciones</p>
+            </section>
     
-       </div>
-        
+    
+    
+            <div class="logos">
+    
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-pinterest"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook"></i>
+    
+            </div>
+                <div class="marcaRegistrada"><p>Hairsy Inc <i class="fa-solid fa-copyright"> 2022</i></p></div>
+            
+        </footer>
+    
     </footer>
 </body>
 </html>
