--- a/views/product.html
+++ b/views/product.html
@@ -29,22 +29,37 @@
             </div>
 
     </header>
-    <main class="main-product">
-        <div class="producto"><img class="product-detail" src="/public/images/producto-1.jpg">
-            <div class="descripcion"><h1>Crema Facial</h1>  
-            <br>
-            <p> La Crema Facial 5 en 1 brinda nutrición intensiva sin sensación grasosa. 
-                Experimentá una crema que nutre tu piel sin dejar sensación grasosa. 
-                La fórmula contiene hidronutrientes que se absorben inmediatamente en tu piel, 
-                obteniendo una profunda nutrición sin sensación grasosa en tu piel. 
-                Dale a tu piel el cuidado que necesita con la crema facial Brand. 
-                Tu piel humectada por más tiempo.</p>
-                <br>
-                <h3>$200.00 (Imp. incluidos)</h3>
-                <br>
-            <button class="agregar-carrito-button">Agregar al carrito</button>
-        </div>
-        </div>
+    <main>
+        <p class="banner">ENVIOS GRATIS A PARTIR DE $1000!</p>
+        <section class="main_product">
+                    <h5 class="titulo">Lorem Ipsum</h5>
+                    <img src="/public/images/product.png">
+                    <p class="descripcion">$3.500</p>
+                    <p class="descripcion">Impuestos incluidos</p>
+                    <button class="cart_button">Agregar al carrito</button>
+        </section>
+        <section class="relacionados">
+            <h4>También te puede interesar</h4>
+            <h5 class="titulo">Lorem Ipsum</h5>
+                    <img src="/public/images/product.png">
+                    <p class="descripcion">$3.500</p>
+                    <p class="descripcion">Impuestos incluidos</p>
+                    <button class="cart_button">Agregar al carrito</button>
+        </section>
+        <section class="relacionados">
+            <h5 class="titulo">Lorem Ipsum</h5>
+                    <img src="/public/images/product.png">
+                    <p class="descripcion">$3.500</p>
+                    <p class="descripcion">Impuestos incluidos</p>
+                    <button class="cart_button">Agregar al carrito</button>
+        </section>
+        <section class="relacionados">
+            <h5 class="titulo">Lorem Ipsum</h5>
+                    <img src="/public/images/product.png">
+                    <p class="descripcion">$3.500</p>
+                    <p class="descripcion">Impuestos incluidos</p>
+                    <button class="cart_button">Agregar al carrito</button>
+        </section>
     </main>
     <footer>
 
